# monitoring-rotory-valve

./: .gitignore  GUI_QUICK_START.md  PROJECT_IMPLEMENTATION_COMPLETE_REPORT.md  README.md  STEP2_CORRECTION_REPORT.md  STEP2_REPORT.md  STEP3_REPORT.md  STEP7_COMPLETION_CHECKLIST.md  STEP7_GUI_IMPLEMENTATION.md  STEP8_INTEGRATION_REPORT.md  __init__.py  compute_eigenvalues.py  diagnose_closed_loop.py  git_push_instructions.md  main_simulation.py  rebuild_closed_loop.py  requirements.txt  simulation_runner.py
.kiro/specs/qt-gui-integration/: design.md  requirements.md  tasks.md
analysis/: analysis_step6.py  performance_metrics.py  pole_analysis.py
communication/: protocol_definition.py
config/: system_parameters.py
docs/: final_verified_results_section.md  industrial_pressure_control_system_design.md  numerical_state_space_and_simulation_specification.md
gui/: CMakeLists.txt
gui/.hypothesis/constants/: 004e722d2b39195a  03a0bc33c3be41ac  041b82baf95116f0  068c9e16d4886008  07475514dc0bbadb  09ae28b390a241d0  0cfa12dfbf9e9abb  110a1d1d892c7388  11a4fb9bf042a054  13efa0910df75e7a  146ce438f76c65d3  14ce7443b3faf241  1711dca7bbb78b0f  17e3f8cea4119fc7  18baa06439e76d96  1a5326b88fdd03ad  1b03421aacbc7cd8  1dc359315dc82348  1f4b62403fde35c2  219385b4acf67710  2196e604560785f8  22aee50d81961c02  23de3c8efc283fa6  2438213548c974ab  25878421010898fc  2ae14f7c2efda9dc  2f95c8527aa42db7  30ef0a2658953185  31722252d7529a88  32b05670edd550d5  368f19d2cc26015d  372ae7d00561b2ec  3de1ca6491176637  44b6e1c94304b2f6  4b2003682c360749  4bb609fefcfd3b47  4bf7fe19a5ce4096  4cba0d335ef5671f  4ddf44b43afe2a81  4fec1c7c35b20ce1  (+80 more)
gui/qt_interface/: TASK_2.1_VERIFICATION.md  TASK_2.2_VERIFICATION.md  TASK_2.3_VERIFICATION.md  TASK_2.4_VERIFICATION.md  TASK_2.5_VERIFICATION.md  TASK_2.6_VERIFICATION.md  TASK_3.1_VERIFICATION.md  TASK_3.3_VERIFICATION.md  TASK_5.3_VERIFICATION.md  TASK_7_CHECKPOINT_REPORT.md  TASK_8.1_VERIFICATION.md  TASK_8.2_VERIFICATION.md  TASK_8.3_VERIFICATION.md  TASK_8.4_VERIFICATION.md  communication_client.cpp  communication_client.h  main.cpp  mainwindow.cpp  mainwindow.h  test_integration.cpp
models/: closed_loop_model.py  full_state_space_model.py  gearbox_model.py
simulation/: closed_loop_simulation.py  disturbance_simulation.py  open_loop_simulation.py
src/analysis/: bode_analysis.py
src/communication/: __init__.py  zmq_server.py
src/controllers/: pid_controller.py
src/models/: __init__.py  motor_model.py  pressure_model.py  valve_model.py
tests/: test_closed_loop_model.py  test_error_calculation_property.py  test_gain_serialization_property.py  test_json_roundtrip_property.py  test_motor_model.py  test_path_resolution_property.py  test_pid_controller.py  test_simulation_runner.py  test_simulation_runner_integration.py  test_simulation_validation.py  test_state_space_model.py  test_status_determination_property.py  test_time_window_property.py
